UPDATE tabs position

--- a/sv-components/src/components/table-network.html
+++ b/sv-components/src/components/table-network.html
@@ -1,6 +1,6 @@
 <import from="./tabs"></import>
 <div id="all">    
-    <sv-tabs idlist="nodes,edges,noedtable,view" titlelist="Nodes,Edges,NodesEdges,View"></sv-tabs>
+    <sv-tabs idlist="nodes,edges,noedtable,view" titlelist="Nodes,Edges,NodesEdges,View" style="position:relative;z-index:1;"></sv-tabs>
     <div id="view"></div>        
     <div id="nodes" style="position:absolute;height:90vh;opacity:90%;z-index:1">
         <sv-table 
