UPDATE tables behavior

--- a/sv-components/src/components/table-network.html
+++ b/sv-components/src/components/table-network.html
@@ -19,27 +19,13 @@
         ></sv-table>
     </div>
     <div id="noedtable" style="position:absolute;height:90vh;opacity:90%;z-index:1">
-        <sv-table component.ref="svTable" show.bind ="!hidetable" datachannel="data" tabid="all"></sv-table>
+        <sv-table 
+        component.ref="svTable"         
+        datachannel="data" 
+        tabid="noedtable"></sv-table>
     </div>
-    <sv-network tabid="visual" datachannel="data" style="width:100vw;height:100vh;position:fixed;top:0;left:0"></sv-network>
+    <sv-network 
+      tabid="visual" 
+      datachannel="data" 
+      style="width:100vw;height:100vh;position:fixed;top:0;left:0"></sv-network>
 </div>
-<!--
-        <div class="w3-dropdown-hover">
-            <button class="w3-button">Table</button>
-            <div class="w3-dropdown-content w3-bar-block w3-card-4" style="z-index:190">
-                <button class="w3-bar-item w3-button" click.trigger="addRow()">+ Add row (subject)</button>
-                <button class="w3-bar-item w3-button" click.trigger="addColumn()">+ Add column (object)</button>                
-                <button click.trigger='switchTo1Table()' class="w3-bar-item w3-button w3-ripple">1 table (subject,object,predicate)</button>
-                <button click.trigger='switchTo2Table()' class="w3-bar-item w3-button w3-ripple">2 tables (nodes, edges)</button>
-                <button class="w3-bar-item w3-button" click.trigger="submit()">Refresh</button>
-                <button class="w3-bar-item w3-button" click.trigger="showHideTable()">show/hide table</button>    
-            </div>
-        </div>
-        <div class="w3-dropdown-hover">
-            <button class="w3-button">Network</button>
-            <div class="w3-dropdown-content w3-bar-block w3-card-4"  style="z-index:190">
-                <button class="w3-bar-item w3-button" click.trigger="colorEdges()">colorEdges</button>  
-            </div>
-        </div>
-    </div>    
--->
