ADD nodes/edges update in network graph

--- a/sv-components/src/components/table-network.html
+++ b/sv-components/src/components/table-network.html
@@ -5,15 +5,15 @@
     <div id="nodes" style="position:absolute;height:90vh;opacity:90%;z-index:1">
         <sv-table 
         component.ref="svNodes" 
-        datachannel="nodes" 
+        datachannel="data" 
         datatype="nodes" 
         tabid="nodes" 
         ></sv-table>
     </div>
     <div id="edges" style="position:absolute;height:90vh;opacity:90%;z-index:1">
         <sv-table 
-        component.ref="svNodes" 
-        datachannel="edges" 
+        component.ref="svEdges" 
+        datachannel="data" 
         datatype="edges" 
         tabid="edges" 
         ></sv-table>
