--- a/sv-components/src/components/table-network.html
+++ b/sv-components/src/components/table-network.html
@@ -1,6 +1,12 @@
-<sv-tabs idlist="nodes,edges,noedtable,view" titlelist="Nodes,Edges,NodesEdges,View"
-    style="position:relative;z-index:1;"></sv-tabs>
-<div id="view"></div>
+<sv-tabs idlist="view,help,source,nodes,edges,noedtable" titlelist="View,Docs,Source,Nodes,Edges,N&E"
+    style="position:relative;z-index:1;width:50%;display:block"></sv-tabs>
+<sv-network tabid="visual" datachannel="data" style="width:100vw;height:100vh;position:fixed;top:0;left:0"></sv-network>    
+<div id="view" style="position:absolute;opacity:80%;z-index:1;background-color: white;">    
+</div>
+<div id="help"><au-slot></au-slot></div>
+<div id="source" style="position:absolute;height:90vh;opacity:90%;z-index:1">    
+   <sv-pdf-uploader></sv-pdf-uploader>   
+</div>
 <div id="nodes" style="position:absolute;height:90vh;opacity:90%;z-index:1">
     <sv-table component.ref="svNodes" datachannel="data" datatype="nodes" tabid="nodes"></sv-table>
 </div>
@@ -10,4 +16,3 @@
 <div id="noedtable" style="position:absolute;height:90vh;opacity:90%;z-index:1">
     <sv-table component.ref="svTable" datachannel="data" tabid="noedtable"></sv-table>
 </div>
-<sv-network tabid="visual" datachannel="data" style="width:100vw;height:100vh;position:fixed;top:0;left:0"></sv-network>
